# Modern-CMake-for-Cpp

./: .gitignore  .nvim.lua  .vimrc.lua  clean_builds.sh  link_dotfiles_from_previous_dir.sh
examples/chapter01/01-hello/: clean_builds.sh
examples/chapter01/03-script/: script.cmake
examples/chapter01/04-module/: CMakeLists.txt
examples/chapter02/01-arguments/: message.cmake  quoted.cmake  unquoted.cmake
examples/chapter02/02-variables/: set.cmake
examples/chapter02/03-environment/: build.sh
examples/chapter02/04-scope/: CMakeLists.txt
examples/chapter02/06-conditional/: conditional.cmake  conditional_compare.cmake  conditional_gotcha.cmake
examples/chapter02/07-loops/: foreach.cmake  zip.cmake
examples/chapter02/08-definitions/: function.cmake  macro_example.cmake
examples/chapter02/09-procedural/: CMakeLists.txt
examples/chapter02/10-useful/: message_context.cmake
examples/chapter03/01-partition/: CMakeLists.txt  main.cpp
examples/chapter03/03-add_subdirectory/: CMakeLists.txt  main.cpp
examples/chapter03/03-add_subdirectory/cars/: CMakeLists.txt  car.cpp
examples/chapter03/05b-systemid/: CMakeLists.txt
examples/chapter03/06-toolchain/: CMakeLists.txt
examples/chapter03/07-features/: CMakeLists.txt
examples/chapter03/08-test_run/: CMakeLists.txt  main.cpp
examples/chapter03/09-in-source/: CMakeLists.txt
examples/chapter04/01-targets/: CMakeLists.txt  calculations.cpp  drawing.cpp  gui_app.cpp  terminal_app.cpp
examples/chapter04/02-propagated/: CMakeLists.txt
examples/chapter04/03-command/: CMakeLists.txt  main.cpp
examples/chapter04/04-command/: CMakeLists.txt  main.cpp
examples/chapter04/05-genex/: CMakeLists.txt
examples/chapter05/01-sources/: CMakeLists.txt  gui_linux.cpp  gui_windows.cpp  main.cpp
examples/chapter05/02-definitions/: definitions.cpp
examples/chapter05/03-git/: CMakeLists.txt  print_commit.cpp
examples/chapter05/04-configure/: CMakeLists.txt  configure.cpp
examples/chapter05/05-optimize/: inline.cpp  unroll.cpp
examples/chapter05/06-precompile/: hello.cpp
examples/chapter05/07-debug/: hello.cpp
examples/chapter06/01-libraries/: CMakeLists.txt  function_a.cpp  function_b.cpp
examples/chapter06/02-odr-fail/: CMakeLists.txt
examples/chapter06/03-odr-success/: one.cpp  shared.h
examples/chapter06/04-odr-success/: one.cpp
examples/chapter06/05-dynamic/: a.cpp  b.cpp  main.cpp
examples/chapter06/06-unresolved/: CMakeLists.txt  main.cpp  outer.cpp
examples/chapter07/06-git-submodule-auto/: CMakeLists.txt
examples/chapter07/09-fetch-content/: CMakeLists.txt
examples/chapter08/03-catch2/test/: CMakeLists.txt  calc_test.cpp  run_test.cpp
(+40 files in other folders)
